<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Warung Makan Bakso</string>
    <string name="judul">Makanan</string>
    <string name="action_settings">Settings</string>
    <string name="mk1">Bakso Telor 15000</string>
    <string name="mk2">Bakso Urat 12000</string>
    <string name="mk3">Bakso Jumbo 20000</string>
     <string name="pesan">Pesan</string>

</resources>
