<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.warungmakanbakso.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:text="@string/mk1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="16dp"
        android:text="@string/mk2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="18dp"
        android:text="@string/mk3" />

    <EditText
        android:id="@+id/qty1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/checkBox1"
        android:ems="10"
        android:inputType="number"
        android:text="0" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/qty2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qty1"
        android:layout_alignTop="@+id/checkBox2"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/qty3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/qty2"
        android:layout_alignTop="@+id/checkBox3"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pesan"
        android:layout_alignBottom="@+id/pesan"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/pesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_toLeftOf="@+id/hasil"
        android:text="@string/pesan" />

</RelativeLayout>